# rs-binary-decision-diagrams

./: .gitignore  Cargo.toml  PERF.md  PERF_APPLY.md  PERF_COUPLED_DFS.md  PERF_TRAVERSAL.md  README.md
benches/: itgr.rs
src/: _impl_apply.rs  _impl_bdd_utils.rs  _impl_pointer.rs  _impl_u8.rs  _impl_variable.rs  function.rs  lib.rs  perf_testing.rs  static_task_cache.rs
src/_bdd_u16/: _impl_apply.rs  _impl_node_u64.rs  _impl_pointer_u16.rs  _impl_static_node_cache.rs  _impl_static_stack.rs  _impl_static_task_cache.rs  mod.rs
src/_bdd_u32/: _impl_apply.rs  _impl_complete_task_queue.rs  _impl_partial_node_cache.rs  _impl_partial_task_cache.rs  _impl_task_bench.rs  _impl_task_bench_2.rs  _impl_task_bench_3.rs  mod.rs
src/machine/: bdd_node.rs  mod.rs  node_id.rs  variable_id.rs
src/machine/bdd/: mod.rs
src/v2/: mod.rs
src/v2/_impl_/: mod.rs
src/v2/_impl_/bdd/: apply.rs  mod.rs
src/v2/_impl_/bdd/binary_operations/: mod.rs
src/v2/_impl_/bdd/binary_operations/u32/: coupled_dfs_stack.rs  mod.rs  partial_task_cache.rs  pointer_pair.rs
src/v2/_impl_/bdd/binary_operations/u48/: coupled_dfs_stack.rs  mod.rs  (+2 more)
src/v2/bench_fun/: apply.rs  apply2.rs  coupled_dfs.rs  deps.rs  mod.rs  ooo.rs
src/v3/: mod.rs
src/v3/core/: bdd.rs  mod.rs  node_id.rs  packed_bdd_node.rs  variable_id.rs
src/v3/core/ooo/: execution_queue.rs  mod.rs  node_cache.rs  reorder_buffer.rs  task_cache.rs  task_stack.rs
src/v4/: mod.rs
src/v4/apply/: mod.rs  node_cache.rs  task_cache.rs  unsafe_stack.rs
src/v4/core/: _bdd.rs  _node.rs  _node_index.rs  _variable.rs  mod.rs
