[package]
name = "binary-decision-diagrams"
version = "0.1.0"
authors = ["Samuel Pastva <daemontus@gmail.com>"]
edition = "2018"

[dependencies]
fxhash = "0.2.1"
likely_stable = "0.1.2"
lazy_static = "1.4.0"
biodivine-lib-bdd = "0.2.1"

[dev-dependencies]
criterion = "0.3.4"
criterion-perf-events = "0.1.3"
perfcnt = "0.7.1"

[[bench]]
name = "itgr"
harness = false